app-yamls/app_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app-service
spec:
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
  selector:
    svc: python-app-service
