app-yamls/app_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: python-app-service
spec:
  rules:
  - http:
      paths:
      - path: /.*
        backend:
          serviceName: python-app-service
          servicePort: 80
